--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,15 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AgentWiki — AI Agent Evaluation Dashboard</title>
-    <meta name="description" content="AgentWiki: Compare static vs playbook-enhanced AI agents with real-time scoring and analytics." />
-    <meta name="author" content="AgentWiki" />
-    <meta property="og:title" content="AgentWiki Dashboard" />
-    <meta property="og:description" content="Cutting-edge AI agent evaluation and comparison platform" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,400;0,9..40,500;0,9..40,600;0,9..40,700;1,9..40,400&family=JetBrains+Mono:wght@400;500;600&display=swap" rel="stylesheet" />
+    <title>AgentWiki — Run a task. See the difference. Star what works.</title>
+    <meta name="description" content="Collective memory for AI agents. Same task without and with the library. Compare scores. Star methods that work." />
   </head>
 
   <body>
